[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://scripts/Terminal.gd" type="Script" id=2]
[ext_resource path="res://addons/simpleble/BLEAdapter.gd" type="Script" id=3]

[sub_resource type="Theme" id=5]
Button/styles/disabled = null
Button/styles/focus = null
TextEdit/fonts/font = null

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource( 5 )
script = ExtResource( 1 )

[node name="TerminalBackground" type="Panel" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/panel = SubResource( 6 )

[node name="Terminal" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -160.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
bbcode_enabled = true
bbcode_text = "[color=#00FF00]Welcome to the demo project of GDSimpleBLE!

Use the scan button to see the BLE devices and select the index using the spinning box and click on connect
It is not possible to get the services and characteristics of a server, that's why the two line edits should be filled in manually
Index 0 will attempt a connection using the default server address of the ESP32 node
The first one (on the left) for the service, and the second one (on the right) for the characteristic
If you are using the source in the folder esp32, the service GDNativeBLE is accessible at this address: 6E400001-B5A3-F393-E0A9-E50E24DCCA9E
This service has 3 characteristics:
		- 1 RX in WRITE mode: 6E400002-B5A3-F393-E0A9-E50E24DCCA9E
		- 2 TX in NOTIFY mode: 6E400003-B5A3-F393-E0A9-E50E24DCCA9E
		- 3 TX in READ mode: 6E400004-B5A3-F393-E0A9-E50E24DCCA9E
If you send data to the first one, the rxValueCount value will be incremented, and your data will be sent to the serial @115200 baud
If you subscribe to the second one, every second the value txValue will be incremented and sent
If you read the data on the last one, you will get the rxValueCount value
[/color]
"
text = "Welcome to the demo project of GDSimpleBLE!

Use the scan button to see the BLE devices and select the index using the spinning box and click on connect
It is not possible to get the services and characteristics of a server, that's why the two line edits should be filled in manually
Index 0 will attempt a connection using the default server address of the ESP32 node
The first one (on the left) for the service, and the second one (on the right) for the characteristic
If you are using the source in the folder esp32, the service GDNativeBLE is accessible at this address: 6E400001-B5A3-F393-E0A9-E50E24DCCA9E
This service has 3 characteristics:
		- 1 RX in WRITE mode: 6E400002-B5A3-F393-E0A9-E50E24DCCA9E
		- 2 TX in NOTIFY mode: 6E400003-B5A3-F393-E0A9-E50E24DCCA9E
		- 3 TX in READ mode: 6E400004-B5A3-F393-E0A9-E50E24DCCA9E
If you send data to the first one, the rxValueCount value will be incremented, and your data will be sent to the serial @115200 baud
If you subscribe to the second one, every second the value txValue will be incremented and sent
If you read the data on the last one, you will get the rxValueCount value

"
scroll_following = true
selection_enabled = true
script = ExtResource( 2 )

[node name="Controls" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ConnectScan" type="HBoxContainer" parent="Controls"]
margin_right = 1004.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Scan" type="Button" parent="Controls/ConnectScan"]
margin_right = 144.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Start scan"

[node name="Connect" type="Button" parent="Controls/ConnectScan"]
margin_left = 148.0
margin_right = 292.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Connect"

[node name="Infos" type="Button" parent="Controls/ConnectScan"]
margin_left = 296.0
margin_right = 440.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Infos"

[node name="Delete" type="Button" parent="Controls/ConnectScan"]
margin_left = 444.0
margin_right = 588.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "Delete"

[node name="Clear" type="Button" parent="Controls/ConnectScan"]
margin_left = 592.0
margin_right = 736.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "Clear"

[node name="Options" type="HBoxContainer" parent="Controls/ConnectScan"]
margin_left = 740.0
margin_right = 1004.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Update" type="CheckButton" parent="Controls/ConnectScan/Options"]
margin_right = 126.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "Update"

[node name="Advance" type="CheckButton" parent="Controls/ConnectScan/Options"]
margin_left = 130.0
margin_right = 264.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "Advance"

[node name="Connection" type="HBoxContainer" parent="Controls"]
margin_top = 44.0
margin_right = 1004.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Peripheral" type="LineEdit" parent="Controls/Connection"]
margin_right = 332.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "823A7171-DD98-45E8-C0CD-5D272E51A0AE"
placeholder_text = "Peripheral"

[node name="Service" type="LineEdit" parent="Controls/Connection"]
margin_left = 336.0
margin_right = 668.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "6E400001-B5A3-F393-E0A9-E50E24DCCA9E"
placeholder_text = "Service"

[node name="Characteristic" type="LineEdit" parent="Controls/Connection"]
margin_left = 672.0
margin_right = 1004.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "6E400004-B5A3-F393-E0A9-E50E24DCCA9E"
placeholder_text = "Characteristic"

[node name="Interactions" type="HBoxContainer" parent="Controls"]
margin_top = 88.0
margin_right = 1004.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Notify" type="Button" parent="Controls/Interactions"]
margin_right = 248.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
toggle_mode = true
text = "Notify"

[node name="Read" type="Button" parent="Controls/Interactions"]
margin_left = 252.0
margin_right = 500.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Read"

[node name="Send" type="Button" parent="Controls/Interactions"]
margin_left = 504.0
margin_right = 752.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Send"

[node name="Data" type="LineEdit" parent="Controls/Interactions"]
margin_left = 756.0
margin_right = 1004.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Data to send"

[node name="BLEAdapter" type="Node" parent="."]
script = ExtResource( 3 )

[connection signal="pressed" from="Controls/ConnectScan/Scan" to="." method="_on_scan_pressed"]
[connection signal="pressed" from="Controls/ConnectScan/Connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="Controls/ConnectScan/Infos" to="." method="_on_infos_pressed"]
[connection signal="pressed" from="Controls/ConnectScan/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="Controls/ConnectScan/Clear" to="." method="_on_clear_pressed"]
[connection signal="toggled" from="Controls/Interactions/Notify" to="." method="_on_notify_toggled"]
[connection signal="pressed" from="Controls/Interactions/Read" to="." method="_on_read_pressed"]
[connection signal="pressed" from="Controls/Interactions/Send" to="." method="_on_send_pressed"]
[connection signal="adapter_error_status_updated" from="BLEAdapter" to="." method="_on_ble_adapter_adapter_error_status_updated"]
[connection signal="peripheral_connected" from="BLEAdapter" to="." method="_on_ble_adapter_peripheral_connected"]
[connection signal="peripheral_disconnected" from="BLEAdapter" to="." method="_on_ble_adapter_peripheral_disconnected"]
[connection signal="peripheral_error_status_updated" from="BLEAdapter" to="." method="_on_ble_adapter_peripheral_error_status_updated"]
[connection signal="peripheral_found" from="BLEAdapter" to="." method="_on_ble_adapter_peripheral_found"]
[connection signal="peripheral_indicated" from="BLEAdapter" to="." method="_on_ble_adapter_peripheral_indicated"]
[connection signal="peripheral_notified" from="BLEAdapter" to="." method="_on_ble_adapter_peripheral_notified"]
[connection signal="peripheral_updated" from="BLEAdapter" to="." method="_on_ble_adapter_peripheral_updated"]
[connection signal="scan_started" from="BLEAdapter" to="." method="_on_ble_adapter_scan_started"]
[connection signal="scan_stopped" from="BLEAdapter" to="." method="_on_ble_adapter_scan_stopped"]
